--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 *.iml
 .gradle
 /local.properties
+.idea/
 /.idea/libraries
 /.idea/modules.xml
 /.idea/workspace.xml
@@ -8,3 +9,4 @@
 /build
 /captures
 .externalNativeBuild
+.idea/caches/build_file_checksums.ser
