--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 *.iml
 .gradle
 /local.properties
-.idea\
+.idea/*
 /.idea/libraries
 /.idea/modules.xml
 /.idea/workspace.xml
@@ -9,4 +9,3 @@
 /build
 /captures
 .externalNativeBuild
-.idea/caches/build_file_checksums.ser
