Table structure for recipes completed
Still need data entry/testing, and also how to sync database

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="edu.wit.mobileapp.mealprepplanner">
 
     <application
+        android:name=".MealPrepPlannerApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
