--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 *.iml
+*.ser
+*.xml
+.DS_Store
+.externalNativeBuild
 .gradle
 /local.properties
 /.idea/libraries
 /.idea/modules.xml
 /.idea/workspace.xml
-.DS_Store
 /build
 /captures
-.externalNativeBuild
