--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,6 @@
 /.idea/libraries
 /.idea/modules.xml
 /.idea/workspace.xml
+/.idea/caches/build_file_checksums.ser
 /build
 /captures
-<<<<<<< HEAD
-.externalNativeBuild
-.idea/caches/build_file_checksums.ser
-=======
->>>>>>> shopping-cart-activity
