--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,11 @@ apply plugin: 'realm-android'
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId "edu.wit.mobileapp.mealprepplanner"
+        applicationId "edu.wit.mobileapp.grocerybasket"
         minSdkVersion 19
         targetSdkVersion 27
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
